parser/src/ImaParser.cpp

// Generated from Ima.g4 by ANTLR 4.7.1


#include "ImaListener.h"

#include "ImaParser.h"


using namespace antlrcpp;
using namespace antlrcpp;
using namespace antlr4;

ImaParser::ImaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ImaParser::~ImaParser() {
  delete _interpreter;
}

std::string ImaParser::getGrammarFileName() const {
  return "Ima.g4";
}

const std::vector<std::string>& ImaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ImaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- JourneyContext ------------------------------------------------------------------

ImaParser::JourneyContext::JourneyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ImaParser::JourneySpecContext *> ImaParser::JourneyContext::journeySpec() {
  return getRuleContexts<ImaParser::JourneySpecContext>();
}

ImaParser::JourneySpecContext* ImaParser::JourneyContext::journeySpec(size_t i) {
  return getRuleContext<ImaParser::JourneySpecContext>(i);
}

std::vector<ImaParser::TripContext *> ImaParser::JourneyContext::trip() {
  return getRuleContexts<ImaParser::TripContext>();
}

ImaParser::TripContext* ImaParser::JourneyContext::trip(size_t i) {
  return getRuleContext<ImaParser::TripContext>(i);
}


size_t ImaParser::JourneyContext::getRuleIndex() const {
  return ImaParser::RuleJourney;
}

void ImaParser::JourneyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJourney(this);
}

void ImaParser::JourneyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJourney(this);
}

ImaParser::JourneyContext* ImaParser::journey() {
  JourneyContext *_localctx = _tracker.createInstance<JourneyContext>(_ctx, getState());
  enterRule(_localctx, 0, ImaParser::RuleJourney);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(21); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(20);
      journeySpec();
      setState(23); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ImaParser::DATE)
      | (1ULL << ImaParser::IF)
      | (1ULL << ImaParser::BUDGET)
      | (1ULL << ImaParser::HHDIST)
      | (1ULL << ImaParser::HHDURA)
      | (1ULL << ImaParser::DHDIST)
      | (1ULL << ImaParser::DHDURA)
      | (1ULL << ImaParser::BEDTYPE)
      | (1ULL << ImaParser::AMENITY)
      | (1ULL << ImaParser::SERVICELEVEL)
      | (1ULL << ImaParser::GUESTNUM))) != 0));
    setState(26); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(25);
      trip();
      setState(28); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == ImaParser::TRIP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TripContext ------------------------------------------------------------------

ImaParser::TripContext::TripContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ImaParser::TripContext::TRIP() {
  return getToken(ImaParser::TRIP, 0);
}

tree::TerminalNode* ImaParser::TripContext::SEMICOLON() {
  return getToken(ImaParser::SEMICOLON, 0);
}

std::vector<ImaParser::TripSpecContext *> ImaParser::TripContext::tripSpec() {
  return getRuleContexts<ImaParser::TripSpecContext>();
}

ImaParser::TripSpecContext* ImaParser::TripContext::tripSpec(size_t i) {
  return getRuleContext<ImaParser::TripSpecContext>(i);
}


size_t ImaParser::TripContext::getRuleIndex() const {
  return ImaParser::RuleTrip;
}

void ImaParser::TripContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTrip(this);
}

void ImaParser::TripContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTrip(this);
}

ImaParser::TripContext* ImaParser::trip() {
  TripContext *_localctx = _tracker.createInstance<TripContext>(_ctx, getState());
  enterRule(_localctx, 2, ImaParser::RuleTrip);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(ImaParser::TRIP);
    setState(31);
    match(ImaParser::SEMICOLON);
    setState(33); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(32);
      tripSpec();
      setState(35); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << ImaParser::THROUGH)
      | (1ULL << ImaParser::IF)
      | (1ULL << ImaParser::GOTO)
      | (1ULL << ImaParser::BUDGET)
      | (1ULL << ImaParser::HHDIST)
      | (1ULL << ImaParser::HHDURA)
      | (1ULL << ImaParser::DHDIST)
      | (1ULL << ImaParser::DHDURA)
      | (1ULL << ImaParser::BEDTYPE)
      | (1ULL << ImaParser::AMENITY)
      | (1ULL << ImaParser::SERVICELEVEL)
      | (1ULL << ImaParser::GUESTNUM))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JourneySpecContext ------------------------------------------------------------------

ImaParser::JourneySpecContext::JourneySpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ImaParser::JourneySpecContext::getRuleIndex() const {
  return ImaParser::RuleJourneySpec;
}

void ImaParser::JourneySpecContext::copyFrom(JourneySpecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SpecStartDateContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecStartDateContext::DATE() {
  return getToken(ImaParser::DATE, 0);
}

tree::TerminalNode* ImaParser::SpecStartDateContext::THROUGH() {
  return getToken(ImaParser::THROUGH, 0);
}

ImaParser::SpecStartDateContext::SpecStartDateContext(JourneySpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecStartDateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecStartDate(this);
}
void ImaParser::SpecStartDateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecStartDate(this);
}
//----------------- SpecGlobalContext ------------------------------------------------------------------

ImaParser::CommonSpecContext* ImaParser::SpecGlobalContext::commonSpec() {
  return getRuleContext<ImaParser::CommonSpecContext>(0);
}

ImaParser::SpecGlobalContext::SpecGlobalContext(JourneySpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecGlobalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecGlobal(this);
}
void ImaParser::SpecGlobalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecGlobal(this);
}
ImaParser::JourneySpecContext* ImaParser::journeySpec() {
  JourneySpecContext *_localctx = _tracker.createInstance<JourneySpecContext>(_ctx, getState());
  enterRule(_localctx, 4, ImaParser::RuleJourneySpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ImaParser::DATE: {
        _localctx = dynamic_cast<JourneySpecContext *>(_tracker.createInstance<ImaParser::SpecStartDateContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(37);
        match(ImaParser::DATE);
        setState(38);
        match(ImaParser::THROUGH);
        break;
      }

      case ImaParser::IF:
      case ImaParser::BUDGET:
      case ImaParser::HHDIST:
      case ImaParser::HHDURA:
      case ImaParser::DHDIST:
      case ImaParser::DHDURA:
      case ImaParser::BEDTYPE:
      case ImaParser::AMENITY:
      case ImaParser::SERVICELEVEL:
      case ImaParser::GUESTNUM: {
        _localctx = dynamic_cast<JourneySpecContext *>(_tracker.createInstance<ImaParser::SpecGlobalContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(39);
        commonSpec();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TripSpecContext ------------------------------------------------------------------

ImaParser::TripSpecContext::TripSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ImaParser::TripSpecContext::getRuleIndex() const {
  return ImaParser::RuleTripSpec;
}

void ImaParser::TripSpecContext::copyFrom(TripSpecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SpecEndDateContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecEndDateContext::THROUGH() {
  return getToken(ImaParser::THROUGH, 0);
}

tree::TerminalNode* ImaParser::SpecEndDateContext::DATE() {
  return getToken(ImaParser::DATE, 0);
}

ImaParser::SpecEndDateContext::SpecEndDateContext(TripSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecEndDateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecEndDate(this);
}
void ImaParser::SpecEndDateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecEndDate(this);
}
//----------------- SpecLocalContext ------------------------------------------------------------------

ImaParser::CommonSpecContext* ImaParser::SpecLocalContext::commonSpec() {
  return getRuleContext<ImaParser::CommonSpecContext>(0);
}

ImaParser::SpecLocalContext::SpecLocalContext(TripSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecLocalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecLocal(this);
}
void ImaParser::SpecLocalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecLocal(this);
}
//----------------- SpecTripDestContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecTripDestContext::GOTO() {
  return getToken(ImaParser::GOTO, 0);
}

tree::TerminalNode* ImaParser::SpecTripDestContext::STRING() {
  return getToken(ImaParser::STRING, 0);
}

ImaParser::SpecTripDestContext::SpecTripDestContext(TripSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecTripDestContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecTripDest(this);
}
void ImaParser::SpecTripDestContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecTripDest(this);
}
ImaParser::TripSpecContext* ImaParser::tripSpec() {
  TripSpecContext *_localctx = _tracker.createInstance<TripSpecContext>(_ctx, getState());
  enterRule(_localctx, 6, ImaParser::RuleTripSpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ImaParser::THROUGH: {
        _localctx = dynamic_cast<TripSpecContext *>(_tracker.createInstance<ImaParser::SpecEndDateContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(42);
        match(ImaParser::THROUGH);
        setState(43);
        match(ImaParser::DATE);
        break;
      }

      case ImaParser::GOTO: {
        _localctx = dynamic_cast<TripSpecContext *>(_tracker.createInstance<ImaParser::SpecTripDestContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(44);
        match(ImaParser::GOTO);
        setState(45);
        match(ImaParser::STRING);
        break;
      }

      case ImaParser::IF:
      case ImaParser::BUDGET:
      case ImaParser::HHDIST:
      case ImaParser::HHDURA:
      case ImaParser::DHDIST:
      case ImaParser::DHDURA:
      case ImaParser::BEDTYPE:
      case ImaParser::AMENITY:
      case ImaParser::SERVICELEVEL:
      case ImaParser::GUESTNUM: {
        _localctx = dynamic_cast<TripSpecContext *>(_tracker.createInstance<ImaParser::SpecLocalContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(46);
        commonSpec();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommonSpecContext ------------------------------------------------------------------

ImaParser::CommonSpecContext::CommonSpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ImaParser::CommonSpecContext::getRuleIndex() const {
  return ImaParser::RuleCommonSpec;
}

void ImaParser::CommonSpecContext::copyFrom(CommonSpecContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SpecIfThenContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecIfThenContext::IF() {
  return getToken(ImaParser::IF, 0);
}

std::vector<ImaParser::CommonSpecContext *> ImaParser::SpecIfThenContext::commonSpec() {
  return getRuleContexts<ImaParser::CommonSpecContext>();
}

ImaParser::CommonSpecContext* ImaParser::SpecIfThenContext::commonSpec(size_t i) {
  return getRuleContext<ImaParser::CommonSpecContext>(i);
}

tree::TerminalNode* ImaParser::SpecIfThenContext::THEN() {
  return getToken(ImaParser::THEN, 0);
}

ImaParser::SpecIfThenContext::SpecIfThenContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecIfThenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecIfThen(this);
}
void ImaParser::SpecIfThenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecIfThen(this);
}
//----------------- SpecAmenityContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecAmenityContext::AMENITY() {
  return getToken(ImaParser::AMENITY, 0);
}

std::vector<ImaParser::AmenityContext *> ImaParser::SpecAmenityContext::amenity() {
  return getRuleContexts<ImaParser::AmenityContext>();
}

ImaParser::AmenityContext* ImaParser::SpecAmenityContext::amenity(size_t i) {
  return getRuleContext<ImaParser::AmenityContext>(i);
}

ImaParser::SpecAmenityContext::SpecAmenityContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecAmenityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecAmenity(this);
}
void ImaParser::SpecAmenityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecAmenity(this);
}
//----------------- SpecGuestNumContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecGuestNumContext::GUESTNUM() {
  return getToken(ImaParser::GUESTNUM, 0);
}

ImaParser::RangeContext* ImaParser::SpecGuestNumContext::range() {
  return getRuleContext<ImaParser::RangeContext>(0);
}

ImaParser::SpecGuestNumContext::SpecGuestNumContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecGuestNumContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecGuestNum(this);
}
void ImaParser::SpecGuestNumContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecGuestNum(this);
}
//----------------- SpecSerLvlContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecSerLvlContext::SERVICELEVEL() {
  return getToken(ImaParser::SERVICELEVEL, 0);
}

ImaParser::RangeContext* ImaParser::SpecSerLvlContext::range() {
  return getRuleContext<ImaParser::RangeContext>(0);
}

ImaParser::SpecSerLvlContext::SpecSerLvlContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecSerLvlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecSerLvl(this);
}
void ImaParser::SpecSerLvlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecSerLvl(this);
}
//----------------- SpecDHContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecDHContext::TO() {
  return getToken(ImaParser::TO, 0);
}

tree::TerminalNode* ImaParser::SpecDHContext::STRING() {
  return getToken(ImaParser::STRING, 0);
}

ImaParser::RangeContext* ImaParser::SpecDHContext::range() {
  return getRuleContext<ImaParser::RangeContext>(0);
}

tree::TerminalNode* ImaParser::SpecDHContext::DHDIST() {
  return getToken(ImaParser::DHDIST, 0);
}

tree::TerminalNode* ImaParser::SpecDHContext::DHDURA() {
  return getToken(ImaParser::DHDURA, 0);
}

tree::TerminalNode* ImaParser::SpecDHContext::BY() {
  return getToken(ImaParser::BY, 0);
}

ImaParser::TravelModeContext* ImaParser::SpecDHContext::travelMode() {
  return getRuleContext<ImaParser::TravelModeContext>(0);
}

ImaParser::SpecDHContext::SpecDHContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecDHContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecDH(this);
}
void ImaParser::SpecDHContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecDH(this);
}
//----------------- SpecBudgetContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecBudgetContext::BUDGET() {
  return getToken(ImaParser::BUDGET, 0);
}

ImaParser::RangeContext* ImaParser::SpecBudgetContext::range() {
  return getRuleContext<ImaParser::RangeContext>(0);
}

ImaParser::SpecBudgetContext::SpecBudgetContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecBudgetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecBudget(this);
}
void ImaParser::SpecBudgetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecBudget(this);
}
//----------------- SpecHHContext ------------------------------------------------------------------

ImaParser::RangeContext* ImaParser::SpecHHContext::range() {
  return getRuleContext<ImaParser::RangeContext>(0);
}

tree::TerminalNode* ImaParser::SpecHHContext::HHDIST() {
  return getToken(ImaParser::HHDIST, 0);
}

tree::TerminalNode* ImaParser::SpecHHContext::HHDURA() {
  return getToken(ImaParser::HHDURA, 0);
}

tree::TerminalNode* ImaParser::SpecHHContext::BY() {
  return getToken(ImaParser::BY, 0);
}

ImaParser::TravelModeContext* ImaParser::SpecHHContext::travelMode() {
  return getRuleContext<ImaParser::TravelModeContext>(0);
}

ImaParser::SpecHHContext::SpecHHContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecHHContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecHH(this);
}
void ImaParser::SpecHHContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecHH(this);
}
//----------------- SpecBedTypeContext ------------------------------------------------------------------

tree::TerminalNode* ImaParser::SpecBedTypeContext::BEDTYPE() {
  return getToken(ImaParser::BEDTYPE, 0);
}

std::vector<ImaParser::BedTypeContext *> ImaParser::SpecBedTypeContext::bedType() {
  return getRuleContexts<ImaParser::BedTypeContext>();
}

ImaParser::BedTypeContext* ImaParser::SpecBedTypeContext::bedType(size_t i) {
  return getRuleContext<ImaParser::BedTypeContext>(i);
}

ImaParser::SpecBedTypeContext::SpecBedTypeContext(CommonSpecContext *ctx) { copyFrom(ctx); }

void ImaParser::SpecBedTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpecBedType(this);
}
void ImaParser::SpecBedTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ImaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpecBedType(this);
}
ImaParser::CommonSpecContext* ImaParser::commonSpec() {
  CommonSpecContext *_localctx = _tracker.createInstance<CommonSpecContext>(_ctx, getState());
  enterRule(_localctx, 8, ImaParser::RuleCommonSpec);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ImaParser::BUDGET: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecBudgetContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(49);
        match(ImaParser::BUDGET);
        setState(50);
        range();
        break;
      }

      case ImaParser::SERVICELEVEL: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecSerLvlContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(51);
        match(ImaParser::SERVICELEVEL);
        setState(52);
        range();
        break;
      }

      case ImaParser::GUESTNUM: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecGuestNumContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(53);
        match(ImaParser::GUESTNUM);
        setState(54);
        range();
        break;
      }

      case ImaParser::BEDTYPE: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecBedTypeContext>(_localctx));
        enterOuterAlt(_localctx, 4);
        setState(55);
        match(ImaParser::BEDTYPE);
        setState(56);
        bedType();
        setState(61);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ImaParser::T__0) {
          setState(57);
          match(ImaParser::T__0);
          setState(58);
          bedType();
          setState(63);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case ImaParser::AMENITY: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecAmenityContext>(_localctx));
        enterOuterAlt(_localctx, 5);
        setState(64);
        match(ImaParser::AMENITY);
        setState(65);
        amenity();
        setState(70);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ImaParser::T__0) {
          setState(66);
          match(ImaParser::T__0);
          setState(67);
          amenity();
          setState(72);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case ImaParser::HHDIST:
      case ImaParser::HHDURA: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecHHContext>(_localctx));
        enterOuterAlt(_localctx, 6);
        setState(73);
        _la = _input->LA(1);
        if (!(_la == ImaParser::HHDIST

        || _la == ImaParser::HHDURA)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(76);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ImaParser::BY) {
          setState(74);
          match(ImaParser::BY);
          setState(75);
          travelMode();
        }
        setState(78);
        range();
        break;
      }

      case ImaParser::DHDIST:
      case ImaParser::DHDURA: {
        _localctx = dynamic_cast<CommonSpecContext *>(_tracker.createInstance<ImaParser::SpecDHContext>(_localctx));
        enterOuterAlt(_localctx, 7);
        setState(79);
        _la = _input->LA(1);
        if (!(_la == ImaParser::DHDIST
